--- a/th_services/th_reddit/locale/es_ES/LC_MESSAGES/django.po
+++ b/th_services/th_reddit/locale/es_ES/LC_MESSAGES/django.po
@@ -9,3 +9,7 @@ msgstr ""
 # forms.py:16
 msgid "Share link"
 msgstr "Compartir enlace"
+
+# templates/reddit/callback.html:5
+msgid "Congratulations, you have successfully authorized this application to access your Reddit account!"
+msgstr "¡Enhorabuena, acabas de autorizar a esta aplicación para acceder a tu cuenta de Reddit!"
