--- a/th_services/th_twitter/locale/es_ES/LC_MESSAGES/django.po
+++ b/th_services/th_twitter/locale/es_ES/LC_MESSAGES/django.po
@@ -1,3 +1,17 @@
+msgid ""
+msgstr ""
+"Language: es_ES\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+
 # templates/twitter/edit_consumer.html:7
 msgid "Edition of the properties for"
 msgstr "Editar propiedades de"
+
+
+# templates/twitter/callback.html:5
+msgid "Congratulations, you have successfully authorized this application to access your Twitter account!"
+msgstr "¡Enhorabuena, acabas de autorizar a esta aplicación para acceder a tu cuenta de Twitter!"
